--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.jamesmurty.utils/java-xmlbuilder -->
+        <dependency>
+            <groupId>com.jamesmurty.utils</groupId>
+            <artifactId>java-xmlbuilder</artifactId>
+            <version>1.3</version>
+        </dependency>
+
 
     </dependencies>
 
