--- a/pom.xml
+++ b/pom.xml
@@ -140,21 +140,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M7</version>
-                <configuration>
-                    <parallel>methods</parallel>
-                    <threadCount>3</threadCount>
-                    <perCoreThreadCount>true</perCoreThreadCount>
-                    <useUnlimitedThreads>true</useUnlimitedThreads>
-                    <properties>
-                        <configurationParameters>
-                            cucumber.junit-platform.naming-strategy=long
-                        </configurationParameters>
-                    </properties>
-                    <includes>
-                        <include>**/testRunner.class</include>
-                    </includes>
-                </configuration>
+                <version>3.2.2</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>3.2.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
 
             <plugin>
